Fix footer styling, fix icon visibility, remove styling from item descriptions

--- a/static/css/style_drink.css
+++ b/static/css/style_drink.css
@@ -32,3 +32,20 @@ body {
 a {
     text-decoration: none;
 }
+
+.inline-input {
+    display: inline;
+}
+
+.img-wrap {
+    width: 100%; overflow: hidden;
+}
+
+.img-wrap img { 
+    object-fit: cover; width: 100%; height: 200px;
+}
+
+.opacity-100 {
+    opacity: 1!important;
+    background: rgb(244, 244, 244);
+}
